# crew-ai-gemini

./: README.md  pyproject.toml  report.md
src/agent_gemini/: crew.py  main.py
src/agent_gemini/config/: agents.yaml  tasks.yaml
src/agent_gemini/tools/: __init__.py  mongodb_tool.py  serper_search_tool.py
