[project]
name = "agent_gemini"
version = "0.1.0"
description = "agent_gemini using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
agent_gemini = "agent_gemini.main:run"
run_crew = "agent_gemini.main:run"
train = "agent_gemini.main:train"
replay = "agent_gemini.main:replay"
test = "agent_gemini.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
